--- a/index.html
+++ b/index.html
@@ -2,48 +2,63 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Blog</title>
+	<title>MeinBlog</title>
 </head>
 
 <body>
-<a href="https://allthetags.com/"> ich bin ein Link zu einer Seite die alle
-	HTML Tags enthält</a>
-<h1>Ich bin eine Überschrift</h1>
+<a href="https://allthetags.com/"> Hier ist mein YouTube Blog</a>
+<h1>Mein Urlaubsblog 2023 Italien</h1>
 
-<h2>Ich bin eine kleinere Überschrift</h2>
+<h2>Tag 1 Florenz</h2>
 
-<h3>Ich bin eine noch kleinere Überschrift</h3>
 
-<p> ich bin ein Textabsatz ich bin ein Textabsatz <br>
-	ich bin ein text absatz-ich bin ein text absatz-ich bin ein Textabsatz <br>
-	ich bin ein text absatz-ich bin ein text absatz-ich bin ein Textabsatz <br>
-	was passiert, wenn ich die br tags aus dem p tag entferne ?
+
+<p> 9 Uhr war ich Frühstücken <br>
+	und dann Mittags war ich am See <br>
+	und am Abend war ich in der City <br>
+
+	<img src="https://www.reise-nach-italien.de/florenz03x.jpg" alt="Erinnerungsfoto Florenz"> <br>
+	Eintrag  23.1.23 <br>
 </p>
 
-<ul>
-	<li>ich bin ein Listenelement von einer Unordered HTML List und werde von
-		einem ul tag umschlossen
-	</li>
-	<li>ich bin ein Listenelement von einer Unordered HTML List und werde von
-		einem ul tag umschlossen
-	</li>
-	<li>ich bin ein Listenelement von einer Unordered HTML List und werde von
-		einem ul tag umschlossen
-	</li>
-</ul>
+<h2>Tag 2 Rom</h2>
+
+
+
+<p> Um 10 Uhr bin ich angekommen <br>
+	12 Uhr nahe der Arena <br>
+	15 Uhr im Restaurant gewesen<br>
+
+	<img src="https://a.cdn-hotels.com/gdcs/production40/d811/5e89ad90-8f10-11e8-b6b0-0242ac110007.jpg?impolicy=fcrop&w=800&h=533&q=medium" alt="Erinnerungsfoto Rom"><br>
+	Eintrag  24.1.23 <br>
+
+</p>
+
+
+<h5>Weitere Reiseziele 2023 </h5>
 
 <ol>
-	<li>ich bin ein Listenelement von einer Ordered HTML List und werde von
-		einem ol tag umschlossen
+	<li>Istsanbul, Türkei
 	</li>
-	<li>ich bin ein Listenelement von einer Ordered HTML List und werde von
-		einem ol tag umschlossen
+	<li>Athen, Griechenland
 	</li>
-	<li>ich bin ein Listenelement von einer Ordered HTML List und werde von
-		einem ol tag umschlossen
+	<li>Madrid,Spanien
 	</li>
 </ol>
 
-<img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
+
+<p> Blog von Abdul <br>
+<ul>
+	Impressum: <br>
+
+	Abdul Naemi <br>
+
+	Hamburg, Musterstraße 12
+
+
+
+</ul>
+
+
 </body>
 </html>
