--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>MeinBlog</title>
+	<title>Mein Urlaubsblog</title>
 </head>
 
 <body>
 <a href="https://allthetags.com/"> Hier ist mein YouTube Blog</a>
 <h1>Mein Urlaubsblog 2023 Italien</h1>
 
+
+<fieldset>
 <h2>Tag 1 Florenz</h2>
 
 
@@ -20,7 +22,9 @@
 	<img src="https://www.reise-nach-italien.de/florenz03x.jpg" alt="Erinnerungsfoto Florenz"> <br>
 	Eintrag  23.1.23 <br>
 </p>
+	</fieldset>
 
+<fieldset>
 <h2>Tag 2 Rom</h2>
 
 
@@ -33,7 +37,9 @@
 	Eintrag  24.1.23 <br>
 
 </p>
+	</fieldset>
 
+<fieldset>
 
 <h5>Weitere Reiseziele 2023 </h5>
 
@@ -44,7 +50,13 @@
 	</li>
 	<li>Madrid,Spanien
 	</li>
+
+
+
 </ol>
+
+
+	<div style="text-align: right;">
 
 
 <p> Blog von Abdul <br>
@@ -54,8 +66,8 @@
 	Abdul Naemi <br>
 
 	Hamburg, Musterstraße 12
-
-
+	</div>
+	</fieldset>
 
 </ul>
 
