Added a Contact E-Mail

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
 
 
-<p> 9 Uhr war ich Frühstücken <br>
+<p>
+	<img src="https://www.reise-nach-italien.de/florenz03x.jpg" alt="Erinnerungsfoto Florenz" align="right">
+	9 Uhr war ich Frühstücken <br>
 	und dann Mittags war ich am See <br>
 	und am Abend war ich in der City <br>
-
-	<img src="https://www.reise-nach-italien.de/florenz03x.jpg" alt="Erinnerungsfoto Florenz"> <br>
-	Eintrag  23.1.23 <br>
+	Eintrag 23.1.23
 </p>
 	</fieldset>
 
@@ -29,12 +29,12 @@
 
 
 
-<p> Um 10 Uhr bin ich angekommen <br>
+<p>
+	<img src="https://a.cdn-hotels.com/gdcs/production40/d811/5e89ad90-8f10-11e8-b6b0-0242ac110007.jpg?impolicy=fcrop&w=800&h=533&q=medium" alt="Erinnerungsfoto Rom" align="right">
+	Um 10 Uhr bin ich angekommen <br>
 	12 Uhr nahe der Arena <br>
 	15 Uhr im Restaurant gewesen<br>
-
-	<img src="https://a.cdn-hotels.com/gdcs/production40/d811/5e89ad90-8f10-11e8-b6b0-0242ac110007.jpg?impolicy=fcrop&w=800&h=533&q=medium" alt="Erinnerungsfoto Rom"><br>
-	Eintrag  24.1.23 <br>
+	Eintrag  24.1.23
 
 </p>
 	</fieldset>
@@ -59,14 +59,21 @@
 	<div style="text-align: right;">
 
 
+
 <p> Blog von Abdul <br>
-<ul>
+
+
+
+		<ul>
 	Impressum: <br>
 
 	Abdul Naemi <br>
 
 	Hamburg, Musterstraße 12
+		<address>Email me at<a href="ti@gmail.com" /></address>
+		E-Mail
 	</ul>
+
 	</div>
 	</fieldset>
 
