Changed background color

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Mein Urlaubsblog</title>
 </head>
 
-<body>
+<body bgcolor="green">
 <a href="https://allthetags.com/"> Hier ist mein YouTube Blog</a>
 <h1>Mein Urlaubsblog 2023 Italien</h1>
 
