--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 
 <fieldset>
-<h2>Tag 1 Florenz</h2>
+<h2>Tag 1 Endlich in Italien</h2>
+	<h3> Florenz</h3>
 
 
 
@@ -25,7 +26,8 @@
 	</fieldset>
 
 <fieldset>
-<h2>Tag 2 Rom</h2>
+<h2>Weitere Städte</h2>
+	<h3> Rom </h3>
 
 
 
