--- a/index.html
+++ b/index.html
@@ -5,45 +5,47 @@
 	<title>Mein Urlaubsblog</title>
 </head>
 
-<body bgcolor="green">
+<body>
 <a href="https://allthetags.com/"> Hier ist mein YouTube Blog</a>
 <h1>
 	<img src="https://www.pesmaster.com/efootball-2022/graphics/teamlogos/e_000012.png" alt="=Flagge Italien">
 	Mein Urlaubsblog 2023 Italien</h1>
 
 
-<fieldset>
+
 <h2>Tag 1 Endlich in Italien</h2>
 	<h3> Florenz</h3>
 
 
 
 <p>
-	<img src="https://www.reise-nach-italien.de/florenz03x.jpg" alt="Erinnerungsfoto Florenz" align="right">
+
 	9 Uhr war ich Frühstücken <br>
 	und dann Mittags war ich am See <br>
 	und am Abend war ich in der City <br>
+	<img src="https://www.reise-nach-italien.de/florenz03x.jpg" alt="Erinnerungsfoto Florenz"><br>
 	Eintrag 23.1.23
 </p>
-	</fieldset>
 
-<fieldset>
+
+
 <h2>Weitere Städte</h2>
 	<h3> Rom </h3>
 
 
 
 <p>
-	<img src="https://a.cdn-hotels.com/gdcs/production40/d811/5e89ad90-8f10-11e8-b6b0-0242ac110007.jpg?impolicy=fcrop&w=800&h=533&q=medium" alt="Erinnerungsfoto Rom" align="right">
+
 	Um 10 Uhr bin ich angekommen <br>
 	12 Uhr nahe der Arena <br>
 	15 Uhr im Restaurant gewesen<br>
+	<img src="https://a.cdn-hotels.com/gdcs/production40/d811/5e89ad90-8f10-11e8-b6b0-0242ac110007.jpg?impolicy=fcrop&w=800&h=533&q=medium" alt="Erinnerungsfoto Rom" ><br>
 	Eintrag  24.1.23
 
 </p>
-	</fieldset>
 
-<fieldset>
+
+
 
 <h5>Weitere Reiseziele 2023 </h5>
 
@@ -60,7 +62,7 @@
 </ol>
 
 
-	<div style="text-align: right;">
+
 
 
 
@@ -78,8 +80,8 @@
 		E-Mail
 	</ul>
 
-	</div>
-	</fieldset>
+
+
 
 
 
