Added some javascript to

--- a/index.html
+++ b/index.html
@@ -3,88 +3,34 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Mein Urlaubsblog</title>
+	<link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-<a href="https://allthetags.com/"> Hier ist mein YouTube Blog</a>
-<h1>
-	<img src="https://www.pesmaster.com/efootball-2022/graphics/teamlogos/e_000012.png" alt="=Flagge Italien">
-	Mein Urlaubsblog 2023 Italien</h1>
-
-
-
-<h2>Tag 1 Endlich in Italien</h2>
-	<h3> Florenz</h3>
-
-
-
-<p>
-
-	9 Uhr war ich Frühstücken <br>
-	und dann Mittags war ich am See <br>
-	und am Abend war ich in der City <br>
-	<img src="https://www.reise-nach-italien.de/florenz03x.jpg" alt="Erinnerungsfoto Florenz"><br>
-	Eintrag 23.1.23
-</p>
-
-
-
-<h2>Weitere Städte</h2>
-	<h3> Rom </h3>
-
-
-
-<p>
-
-	Um 10 Uhr bin ich angekommen <br>
-	12 Uhr nahe der Arena <br>
-	15 Uhr im Restaurant gewesen<br>
-	<img src="https://a.cdn-hotels.com/gdcs/production40/d811/5e89ad90-8f10-11e8-b6b0-0242ac110007.jpg?impolicy=fcrop&w=800&h=533&q=medium" alt="Erinnerungsfoto Rom" ><br>
-	Eintrag  24.1.23
-
-</p>
-
-
-
-
-<h5>Weitere Reiseziele 2023 </h5>
-
-<ol>
-	<li>Istsanbul, Türkei
-	</li>
-	<li>Athen, Griechenland
-	</li>
-	<li>Madrid,Spanien
-	</li>
-
-
-
-</ol>
-
-
-
-
-
-
-<p> Blog von Abdul <br>
-
-
-
-		<ul>
-	Impressum: <br>
-
-	Abdul Naemi <br>
-
-	Hamburg, Musterstraße 12
-		<address>Email me at<a href="ti@gmail.com" /></address>
-		E-Mail
-	</ul>
-
-
-
-
-
-
-
+<header>
+	<h1>Mein Urlaubsblog</h1>
+</header>
+<main>
+	<div class="picture">
+		<img src="http://www.trendtours.de/.imaging/mte/thg/1200/dam/Rundreisen/5834_Staedte-Erlebnis_Rom/5834_social_media/5834-Staedte-Erlebnis-Rom-colosseum.jpg/jcr:content/5834%20Staedte-Erlebnis-Rom-colosseum.jpg" alt="Rom">
+		<div class="text">
+			<h2>Rom</h2>
+			<p>This is the roman arena.</p>
+		</div>
+	</div>
+	<div class="picture">
+		<img src="https://images.ctfassets.net/bth3mlrehms2/41De5lKWlqJmU80JghXZDS/92f77d477597ef5df6d94467d1f94dc5/Skyline_von_Florenz.jpg?w=3864&h=2173&fl=progressive&q=50&fm=jpg" alt="Florenz">
+		<div class="text">
+			<h2>Florenz</h2>
+			<p>Nice bird pov.</p>
+		</div>
+	</div>
+</main>
+<footer>
+	<p>Impressum <BR>
+		Abdul Naemi <BR>
+		RandomStreet 11<BR>
+		Hamburg
+	</p>
+</footer>
 </body>
 </html>
