--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
 		<img src="http://www.trendtours.de/.imaging/mte/thg/1200/dam/Rundreisen/5834_Staedte-Erlebnis_Rom/5834_social_media/5834-Staedte-Erlebnis-Rom-colosseum.jpg/jcr:content/5834%20Staedte-Erlebnis-Rom-colosseum.jpg" alt="Rom">
 		<div class="text">
 			<h2>Rom</h2>
-			<p>This is the roman arena.</p>
+			<p>Die Arena von Rom</p>
 		</div>
 	</div>
 	<div class="picture">
 		<img src="https://images.ctfassets.net/bth3mlrehms2/41De5lKWlqJmU80JghXZDS/92f77d477597ef5df6d94467d1f94dc5/Skyline_von_Florenz.jpg?w=3864&h=2173&fl=progressive&q=50&fm=jpg" alt="Florenz">
 		<div class="text">
 			<h2>Florenz</h2>
-			<p>Nice bird pov.</p>
+			<p>Florenz von oben</p>
 		</div>
 	</div>
 </main>
 <footer>
 	<p>Impressum <BR>
 		Abdul Naemi <BR>
-		RandomStreet 11<BR>
+		ZufälligStraße 11<BR>
 		Hamburg
 	</p>
 </footer>
