Added some javascript to

--- a/index.html
+++ b/index.html
@@ -13,15 +13,20 @@
 	<div class="picture">
 		<img src="http://www.trendtours.de/.imaging/mte/thg/1200/dam/Rundreisen/5834_Staedte-Erlebnis_Rom/5834_social_media/5834-Staedte-Erlebnis-Rom-colosseum.jpg/jcr:content/5834%20Staedte-Erlebnis-Rom-colosseum.jpg" alt="Rom">
 		<div class="text">
-			<h2>Rom</h2>
+
+			<h2>Erster Urlaubstag</h2>
+			<h3>Rom</h3>
 			<p>Die Arena von Rom</p>
+			<p> Am 1.2.23</p>
 		</div>
 	</div>
 	<div class="picture">
 		<img src="https://images.ctfassets.net/bth3mlrehms2/41De5lKWlqJmU80JghXZDS/92f77d477597ef5df6d94467d1f94dc5/Skyline_von_Florenz.jpg?w=3864&h=2173&fl=progressive&q=50&fm=jpg" alt="Florenz">
 		<div class="text">
-			<h2>Florenz</h2>
+			<h2>Zweiter Urlaubstag</h2>
+			<h3>Florenz</h3>
 			<p>Florenz von oben</p>
+			<p> Am 2.2.23</p>
 		</div>
 	</div>
 </main>
@@ -29,7 +34,8 @@
 	<p>Impressum <BR>
 		Abdul Naemi <BR>
 		ZufälligStraße 11<BR>
-		Hamburg
+		Hamburg <BR>
+		abdul@test.mail.de
 	</p>
 </footer>
 </body>
